RESOLVED FIXED58260
[chromium]: Get the list of misspelled words in the WebKit code insetad of in chromium's RenderView
https://bugs.webkit.org/show_bug.cgi?id=58260
Summary [chromium]: Get the list of misspelled words in the WebKit code insetad of in...
John Abd-El-Malek
Reported 2011-04-11 13:12:23 PDT
[chromium]: Get the list of misspelled words in the WebKit code insetad of in chromium's RenderView
Attachments
Patch (5.64 KB, patch)
2011-04-11 13:12 PDT, John Abd-El-Malek
fishd: review+
fishd: commit-queue-
John Abd-El-Malek
Comment 1 2011-04-11 13:12:51 PDT
John Abd-El-Malek
Comment 2 2011-04-11 13:15:55 PDT
The Chrome side change is http://codereview.chromium.org/6813090/. The motivation is to get rid of the remaining code in render_view.cc which deals with spellchecking. Since all the code that uses it is in WebKit, with Chrome providing the implementation backend, I moved the little remaining code out to WebKit.
Darin Fisher (:fishd, Google)
Comment 3 2011-04-12 09:30:01 PDT
Comment on attachment 89062 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89062&action=review > Source/WebKit/chromium/src/ContextMenuClientImpl.cpp:269 > + nit: kill this extra new line
John Abd-El-Malek
Comment 4 2011-04-12 11:46:08 PDT
Note You need to log in before you can comment on or make changes to this bug.