2011-04-11  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Darin Fisher.

        [chromium]: Get the list of misspelled words in the WebKit code insetad of in chromium's RenderView
        https://bugs.webkit.org/show_bug.cgi?id=58260

        * public/WebContextMenuData.h:
        * public/WebSpellCheckClient.h:
        (WebKit::WebSpellCheckClient::spellCheck):
        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::checkSpellingOfString):


Canonical link: https://commits.webkit.org/73377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83617 268f45cc-cd09-0410-ab3c-d52691b4dbfc