Source/WebKit/chromium/src/ContextMenuClientImpl.cpp
@@ -61,6 +61,7 @@
 #include "WebPlugin.h"
 #include "WebPluginContainerImpl.h"
 #include "WebPoint.h"
+#include "WebSpellCheckClient.h"
 #include "WebString.h"
 #include "WebURL.h"
 #include "WebURLResponse.h"
@@ -256,8 +257,18 @@ PlatformMenuDescription ContextMenuClientImpl::getCustomMenuFromDefaultItems(
         if (m_webView->focusedWebCoreFrame()->editor()->isContinuousSpellCheckingEnabled()) {
             data.isSpellCheckingEnabled = true;
             // Spellchecking might be enabled for the field, but could be disabled on the node.
-            if (m_webView->focusedWebCoreFrame()->editor()->isSpellCheckingEnabledInFocusedNode())
+            if (m_webView->focusedWebCoreFrame()->editor()->isSpellCheckingEnabledInFocusedNode()) {
                 data.misspelledWord = selectMisspelledWord(defaultMenu, selectedFrame);
+                if (m_webView->spellCheckClient()) {
+                    int misspelledOffset, misspelledLength;
+                    m_webView->spellCheckClient()->spellCheck(
+                        data.misspelledWord, misspelledOffset, misspelledLength,
+                        &data.dictionarySuggestions);
+                    if (!misspelledOffset)
+                        data.misspelledWord.reset();
+
+                }
+            }
         }
     }
 
