Source/WebKit/chromium/src/EditorClientImpl.cpp
@@ -858,7 +858,7 @@ void EditorClientImpl::checkSpellingOfString(const UChar* text, int length,
 
     // Check to see if the provided text is spelled correctly.
     if (isContinuousSpellCheckingEnabled() && m_webView->spellCheckClient())
-        m_webView->spellCheckClient()->spellCheck(WebString(text, length), spellLocation, spellLength);
+        m_webView->spellCheckClient()->spellCheck(WebString(text, length), spellLocation, spellLength, 0);
     else {
         spellLocation = 0;
         spellLength = 0;
